# nrf-wearable-cardiac-auscultation

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.defaults  README.md  prj.conf  requirements.txt  sw.js
boards/: nrf5340_audio_dk_nrf5340_cpuapp.overlay
docs/: dashboard.html  index.html  manifest.json  sw.js
firmware/: CMakeLists.txt  Kconfig  Kconfig.defaults  README.md  prj.conf
firmware/boards/: mic_patch_mk1_nrf5340_cpuapp.overlay  mic_patch_mk2_nrf5340_cpuapp.overlay  nrf5340_audio_dk_nrf5340_cpuapp.overlay
firmware/src/: event_handler.c  event_handler.h  macros.h  main.c
firmware/src/audio/: audio_in.c  audio_in.h  audio_stream.c  audio_stream.h  circular_block_buffer.c  circular_block_buffer.h  wav_file.c  wav_file.h
firmware/src/audio/dsp/: circular_block_buffer.c  circular_block_buffer.h  peak_processor.c  peak_processor.h  peak_validator.c  peak_validator.h  rt_peak_detector.c  rt_peak_detector.h  trend_analysis.c  trend_analysis.h  window_analysis.c  window_analysis.h
firmware/src/audio/filters/: bandpass_coeffs.h  lowpass_coeffs.h
firmware/src/ble/: ble_manager.c  ble_manager.h  heart_service.c  heart_service.h
firmware/src/modules/: button_handler.c  led_controller.c  led_controller.h
python_dsp/: hs_analysis.ipynb  main.py  requirements.txt
python_dsp/output/: bandpass_coeffs  bandpass_coeffs.h  lowpass_coeffs  lowpass_coeffs.h
python_dsp/src/: filters.py  peak_detector_rt.py  peak_processor.py  peak_validator.py  slab_buffer_manager.py  trends_and_alerts.py  utils.py  window_analysis.py
src/: event_handler.c  event_handler.h  macros.h  main.c
src/audio/: Kconfig  Kconfig.defaults  audio_stream.c  audio_stream.h  wav_file.c  wav_file.h
src/modules/: Kconfig  ble_manager.c  ble_manager.h  button_handler.c  button_handler.h  led_controller.c  led_controller.h  sd_card.c
web_interface/: dashboard.html  heart_dashboard_stem_plot.html
